/*
 * Copyright 2019 Infostellar, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package stellarstation.api.v1.orbit;

option go_package = "github.com/infostellarinc/go-stellarstation/api/v1/orbit";

option java_multiple_files = true;
option java_outer_classname = "OrbitProto";
option java_package = "com.stellarstation.api.v1.orbit";

// Messages related to satellite orbits.

// Unparsed TLE data for a satellite - https://en.wikipedia.org/wiki/Two-line_element_set
message Tle {
  // The first line of the TLE. Not a title line.
  string line_1 = 1;

  // The second line of the TLE.
  string line_2 = 2;
}
